--- a/p/ad/index.html
+++ b/p/ad/index.html
@@ -66,6 +66,6 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/60f20d48a82429c0bba847a9c350afd2/invoke.js"></script>
-  
+  <script type='text/javascript' src='//pl28106749.effectivegatecpm.com/e1/02/3d/e1023da1e01babe3c7cb966cd3514d7f.js'></script>
 </body>
 </html>
