--- a/snd/index.html
+++ b/snd/index.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>memtag sounds</title>
+<title>MEMTAG SOUNDS</title>
 <style>
 :root{--g:12px;--r:14px;--c:110px;--a:99,102,241;--b:rgba(255,255,255,0.06);--b2:rgba(255,255,255,0.03);--t:#e6eef8;--m:#9aa6bf;--bg1:#0f1724;--bg2:#071022}
 html,body{height:100%;margin:0;padding:20px;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:radial-gradient(1000px 600px at 10% 10%,rgba(var(--a),0.1),transparent),linear-gradient(180deg,var(--bg1),var(--bg2));color:var(--t)}
+h1{text-align:center;margin-bottom:20px;font-size:32px}
 .grid{display:grid;gap:var(--g);grid-template-columns:repeat(8,1fr)}
 @media(max-width:1200px){.grid{grid-template-columns:repeat(6,1fr)}}
 @media(max-width:992px){.grid{grid-template-columns:repeat(4,1fr)}}
@@ -15,7 +16,6 @@ html,body{height:100%;margin:0;padding:20px;font-family:Inter,ui-sans-serif,syst
 .card:hover{transform:translateY(-6px) scale(1.02);box-shadow:0 24px 60px rgba(2,6,23,0.45)}
 .bg{position:absolute;inset:0;background-size:cover;background-position:center;filter:blur(12px) brightness(.6) saturate(95%);transform:scale(1.08)}
 .bg::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg,rgba(0,0,0,0) 20%,rgba(0,0,0,.42) 100%)}
-.card::before{content:'';position:absolute;left:-20%;top:-40%;width:120%;height:60%;transform:rotate(-18deg);background:linear-gradient(90deg,rgba(255,255,255,0.02),rgba(255,255,255,0));opacity:.5}
 .meta{position:relative;z-index:4;display:flex;gap:12px;align-items:center;width:100%}
 .thumb{width:64px;height:64px;border-radius:12px;flex:0 0 64px;overflow:hidden;box-shadow:0 8px 22px rgba(2,6,23,.5);background:linear-gradient(135deg,rgba(255,255,255,0.03),rgba(255,255,255,0.01))}
 .thumb img{width:100%;height:100%;object-fit:cover}
@@ -23,6 +23,7 @@ html,body{height:100%;margin:0;padding:20px;font-family:Inter,ui-sans-serif,syst
 .title{font-weight:700;font-size:14px;line-height:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .sub{font-size:12px;color:var(--m);margin-top:6px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .controls-right{display:flex;align-items:center;gap:8px}
+.play-btn{width:40px;height:40px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);display:grid;place-items:center;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));cursor:pointer}
 .badge{position:absolute;top:12px;right:12px;padding:6px 10px;border-radius:999px;font-size:12px;background:rgba(var(--a),0.95);color:#fff;z-index:6;box-shadow:0 8px 30px rgba(99,102,241,.14);opacity:0;transform:translateY(-6px) scale(.98);transition:all .22s}
 .badge.show{opacity:1;transform:translateY(0) scale(1)}
 .empty{max-width:720px;margin:48px auto;padding:18px;border-radius:12px;background:var(--b2);color:var(--m);text-align:center}
@@ -31,6 +32,7 @@ html,body{height:100%;margin:0;padding:20px;font-family:Inter,ui-sans-serif,syst
 </style>
 </head>
 <body>
+<h1>MEMTAG SOUNDS</h1>
 <div class="container">
 <main>
 <section id="grid" class="grid"></section>
@@ -46,7 +48,7 @@ C=function(a){return a.split(/\r?\n/).map(function(x){return x.trim()}).filter(f
 P=function(a){return a.split(",").map(function(x){return x.trim()})},
 B=function(txt,b){try{navigator.clipboard&&navigator.clipboard.writeText?navigator.clipboard.writeText(txt).then(function(){S(b)}):(ta=document.createElement("textarea")).value=txt,document.body.appendChild(ta),ta.select(),document.execCommand("copy"),ta.remove(),S(b)}catch(e){}},
 S=function(b){b.classList.add("show"),setTimeout(function(){b.classList.remove("show")},1500)},
-D=function(n,u,i){var a=document.createElement("article");a.className="card",a.tabIndex=0,i&&(g=document.createElement("div")).className="bg",g.style.backgroundImage="url("+i+")",a.appendChild(g);var b=document.createElement("div");b.className="badge",b.textContent=t.c,a.appendChild(b);var m=document.createElement("div");m.className="meta",th=document.createElement("div");th.className="thumb",ti=document.createElement("img"),ti.alt=n,ti.src=i||"",th.appendChild(ti),info=document.createElement("div"),info.className="info",tt=document.createElement("div"),tt.className="title",tt.textContent=n,ts=document.createElement("div"),ts.className="sub",ts.textContent=u,info.appendChild(tt),info.appendChild(ts),ctrl=document.createElement("div"),ctrl.className="controls-right",m.appendChild(th),m.appendChild(info),m.appendChild(ctrl),a.appendChild(m);var pr=null;return a.addEventListener("pointerdown",function(){pr=setTimeout(function(){pr=null,B(u,b)},l)}),a.addEventListener("pointerup",function(){pr&&(clearTimeout(pr),pr=null,window.open(u,"_blank"))}),a.addEventListener("pointercancel",function(){pr&&(clearTimeout(pr),pr=null)}),a.addEventListener("keydown",function(e){"Enter"===e.key&&(e.shiftKey?B(u,b):window.open(u,"_blank"))}),a},
+D=function(n,u,i){var a=document.createElement("article");a.className="card",a.tabIndex=0,i&&(g=document.createElement("div")).className="bg",g.style.backgroundImage="url("+i+")",a.appendChild(g);var b=document.createElement("div");b.className="badge",b.textContent=t.c,a.appendChild(b);var m=document.createElement("div");m.className="meta",th=document.createElement("div");th.className="thumb",ti=document.createElement("img"),ti.alt=n,ti.src=i||"",th.appendChild(ti),info=document.createElement("div"),info.className="info",tt=document.createElement("div"),tt.className="title",tt.textContent=n,ts=document.createElement("div"),ts.className="sub",ts.textContent=u,info.appendChild(tt),info.appendChild(ts),ctrl=document.createElement("div"),ctrl.className="controls-right",pb=document.createElement("button"),pb.className="play-btn",pb.title="play",pb.innerHTML="▶",pb.addEventListener("click",function(e){e.stopPropagation();try{var au=new Audio(u);au.play()}catch(_){}}),ctrl.appendChild(pb),m.appendChild(th),m.appendChild(info),m.appendChild(ctrl),a.appendChild(m);var pr=null;return a.addEventListener("pointerdown",function(){pr=setTimeout(function(){pr=null,B(u,b)},l)}),a.addEventListener("pointerup",function(){pr&&(clearTimeout(pr),pr=null,window.open(u,"_blank"))}),a.addEventListener("pointercancel",function(){pr&&(clearTimeout(pr),pr=null)}),a.addEventListener("keydown",function(e){"Enter"===e.key&&(e.shiftKey?B(u,b):window.open(u,"_blank"))}),a},
 L=function(){fetch(f+'?_='+Date.now()).then(function(r){return r.ok?r.text():Promise.reject()}).then(function(txt){var rows=C(txt),g=document.getElementById("grid");g.innerHTML="";if(!rows.length)return void(document.getElementById("empty").style.display="block",document.getElementById("empty").textContent=t.e);rows.forEach(function(rw){var p=P(rw);p.length>=3&&g.appendChild(D(p[0],p[1],p[2]))})}).catch(function(){var i=document.getElementById("empty");i.style.display="block",i.textContent=t.e})}();
 </script>
 </body>
