--- a/snd/index.html
+++ b/snd/index.html
@@ -5,27 +5,19 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>MEMTAG SOUNDS</title>
 <style>
-:root{--g:12px;--r:14px;--c:110px;--a:99,102,241;--b:rgba(255,255,255,0.06);--b2:rgba(255,255,255,0.03);--t:#e6eef8;--m:#9aa6bf;--bg1:#0f1724;--bg2:#071022}
+:root{--g:12px;--r:14px;--c:140px;--a:99,102,241;--b:rgba(255,255,255,0.06);--b2:rgba(255,255,255,0.03);--t:#e6eef8;--m:#9aa6bf;--bg1:#0f1724;--bg2:#071022}
 html,body{height:100%;margin:0;padding:20px;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:radial-gradient(1000px 600px at 10% 10%,rgba(var(--a),0.1),transparent),linear-gradient(180deg,var(--bg1),var(--bg2));color:var(--t)}
 h1{text-align:center;margin-bottom:20px;font-size:32px}
 .grid{display:grid;gap:var(--g);grid-template-columns:repeat(8,1fr)}
 @media(max-width:1200px){.grid{grid-template-columns:repeat(6,1fr)}}
 @media(max-width:992px){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(max-width:640px){.grid{grid-template-columns:repeat(3,1fr)}}
-.card{position:relative;overflow:hidden;border-radius:var(--r);min-height:var(--c);display:flex;align-items:flex-end;padding:12px;cursor:pointer;transition:.22s;transition-property:transform,box-shadow;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.04);box-shadow:0 10px 30px rgba(2,6,23,0.35);backdrop-filter:blur(8px) saturate(120%)}
-.card:hover{transform:translateY(-6px) scale(1.02);box-shadow:0 24px 60px rgba(2,6,23,0.45)}
+.card{position:relative;overflow:hidden;border-radius:var(--r);height:var(--c);display:flex;align-items:flex-end;padding:12px;cursor:pointer;transition:.22s;transition-property:transform,box-shadow;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.04);box-shadow:0 10px 30px rgba(2,6,23,0.35);backdrop-filter:blur(8px) saturate(120%)}
+.card:hover{transform:translateY(-4px) scale(1.02);box-shadow:0 20px 50px rgba(2,6,23,0.45)}
 .bg{position:absolute;inset:0;background-size:cover;background-position:center;filter:blur(12px) brightness(.6) saturate(95%);transform:scale(1.08)}
 .bg::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg,rgba(0,0,0,0) 20%,rgba(0,0,0,.42) 100%)}
-.meta{position:relative;z-index:4;display:flex;gap:12px;align-items:center;width:100%}
-.thumb{width:64px;height:64px;border-radius:12px;flex:0 0 64px;overflow:hidden;box-shadow:0 8px 22px rgba(2,6,23,.5);background:linear-gradient(135deg,rgba(255,255,255,0.03),rgba(255,255,255,0.01))}
-.thumb img{width:100%;height:100%;object-fit:cover}
-.info{flex:1;min-width:0}
-.title{font-weight:700;font-size:14px;line-height:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.sub{font-size:12px;color:var(--m);margin-top:6px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.controls-right{display:flex;align-items:center;gap:8px}
-.play-btn{width:40px;height:40px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);display:grid;place-items:center;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));cursor:pointer}
-.badge{position:absolute;top:12px;right:12px;padding:6px 10px;border-radius:999px;font-size:12px;background:rgba(var(--a),0.95);color:#fff;z-index:6;box-shadow:0 8px 30px rgba(99,102,241,.14);opacity:0;transform:translateY(-6px) scale(.98);transition:all .22s}
-.badge.show{opacity:1;transform:translateY(0) scale(1)}
+.meta{position:relative;z-index:4;width:100%;text-align:center}
+.title{font-weight:700;font-size:16px;color:var(--t);text-shadow:0 2px 4px rgba(0,0,0,0.6)}
 .empty{max-width:720px;margin:48px auto;padding:18px;border-radius:12px;background:var(--b2);color:var(--m);text-align:center}
 @keyframes popIn{from{opacity:0;transform:translateY(6px) scale(.998)}to{opacity:1;transform:none}}
 .card{animation:popIn .32s both}
@@ -37,19 +29,4 @@ h1{text-align:center;margin-bottom:20px;font-size:32px}
 <main>
 <section id="grid" class="grid"></section>
 <div id="empty" class="empty" style="display:none"></div>
-</main>
-</div>
-<script>
-!function(){
-var f="snd.txt",l=600,r=(navigator.language||"en").slice(0,2),
-s={uk:{c:"Скопійовано",e:"Файл snd.txt не знайдено або пустий"},ru:{c:"Скопировано",e:"Файл snd.txt не найден или пуст"},en:{c:"Copied",e:"snd.txt not found or empty"}},
-t=s[r]||s.en,
-C=function(a){return a.split(/\r?\n/).map(function(x){return x.trim()}).filter(function(x){return x&&x[0]!="#"})},
-P=function(a){return a.split(",").map(function(x){return x.trim()})},
-B=function(txt,b){try{navigator.clipboard&&navigator.clipboard.writeText?navigator.clipboard.writeText(txt).then(function(){S(b)}):(ta=document.createElement("textarea")).value=txt,document.body.appendChild(ta),ta.select(),document.execCommand("copy"),ta.remove(),S(b)}catch(e){}},
-S=function(b){b.classList.add("show"),setTimeout(function(){b.classList.remove("show")},1500)},
-D=function(n,u,i){var a=document.createElement("article");a.className="card",a.tabIndex=0,i&&(g=document.createElement("div")).className="bg",g.style.backgroundImage="url("+i+")",a.appendChild(g);var b=document.createElement("div");b.className="badge",b.textContent=t.c,a.appendChild(b);var m=document.createElement("div");m.className="meta",th=document.createElement("div");th.className="thumb",ti=document.createElement("img"),ti.alt=n,ti.src=i||"",th.appendChild(ti),info=document.createElement("div"),info.className="info",tt=document.createElement("div"),tt.className="title",tt.textContent=n,ts=document.createElement("div"),ts.className="sub",ts.textContent=u,info.appendChild(tt),info.appendChild(ts),ctrl=document.createElement("div"),ctrl.className="controls-right",pb=document.createElement("button"),pb.className="play-btn",pb.title="play",pb.innerHTML="▶",pb.addEventListener("click",function(e){e.stopPropagation();try{var au=new Audio(u);au.play()}catch(_){}}),ctrl.appendChild(pb),m.appendChild(th),m.appendChild(info),m.appendChild(ctrl),a.appendChild(m);var pr=null;return a.addEventListener("pointerdown",function(){pr=setTimeout(function(){pr=null,B(u,b)},l)}),a.addEventListener("pointerup",function(){pr&&(clearTimeout(pr),pr=null,window.open(u,"_blank"))}),a.addEventListener("pointercancel",function(){pr&&(clearTimeout(pr),pr=null)}),a.addEventListener("keydown",function(e){"Enter"===e.key&&(e.shiftKey?B(u,b):window.open(u,"_blank"))}),a},
-L=function(){fetch(f+'?_='+Date.now()).then(function(r){return r.ok?r.text():Promise.reject()}).then(function(txt){var rows=C(txt),g=document.getElementById("grid");g.innerHTML="";if(!rows.length)return void(document.getElementById("empty").style.display="block",document.getElementById("empty").textContent=t.e);rows.forEach(function(rw){var p=P(rw);p.length>=3&&g.appendChild(D(p[0],p[1],p[2]))})}).catch(function(){var i=document.getElementById("empty");i.style.display="block",i.textContent=t.e})}();
-</script>
-</body>
-</html>
+</main
