--- a/snd/index.html
+++ b/snd/index.html
@@ -5,28 +5,32 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>MEMTAG SOUNDS</title>
 <style>
-:root{--g:12px;--r:14px;--c:140px;--a:99,102,241;--b:rgba(255,255,255,0.06);--b2:rgba(255,255,255,0.03);--t:#e6eef8;--m:#9aa6bf;--bg1:#0f1724;--bg2:#071022}
-html,body{height:100%;margin:0;padding:20px;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:radial-gradient(1000px 600px at 10% 10%,rgba(var(--a),0.1),transparent),linear-gradient(180deg,var(--bg1),var(--bg2));color:var(--t)}
+body{margin:0;font-family:sans-serif;background:#0f1724;color:#fff;padding:20px}
 h1{text-align:center;margin-bottom:20px;font-size:32px}
-.grid{display:grid;gap:var(--g);grid-template-columns:repeat(8,1fr)}
+.grid{display:grid;gap:12px;grid-template-columns:repeat(8,1fr)}
 @media(max-width:1200px){.grid{grid-template-columns:repeat(6,1fr)}}
 @media(max-width:992px){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(max-width:640px){.grid{grid-template-columns:repeat(3,1fr)}}
-.card{position:relative;overflow:hidden;border-radius:var(--r);height:var(--c);display:flex;align-items:flex-end;padding:12px;cursor:pointer;transition:.22s;transition-property:transform,box-shadow;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.04);box-shadow:0 10px 30px rgba(2,6,23,0.35);backdrop-filter:blur(8px) saturate(120%)}
-.card:hover{transform:translateY(-4px) scale(1.02);box-shadow:0 20px 50px rgba(2,6,23,0.45)}
-.bg{position:absolute;inset:0;background-size:cover;background-position:center;filter:blur(12px) brightness(.6) saturate(95%);transform:scale(1.08)}
-.bg::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg,rgba(0,0,0,0) 20%,rgba(0,0,0,.42) 100%)}
-.meta{position:relative;z-index:4;width:100%;text-align:center}
-.title{font-weight:700;font-size:16px;color:var(--t);text-shadow:0 2px 4px rgba(0,0,0,0.6)}
-.empty{max-width:720px;margin:48px auto;padding:18px;border-radius:12px;background:var(--b2);color:var(--m);text-align:center}
-@keyframes popIn{from{opacity:0;transform:translateY(6px) scale(.998)}to{opacity:1;transform:none}}
-.card{animation:popIn .32s both}
+.card{position:relative;height:140px;border-radius:14px;overflow:hidden;cursor:pointer;background-size:cover;background-position:center;display:flex;align-items:flex-start;justify-content:center;text-align:center;backdrop-filter:blur(8px);transition:transform .2s}
+.card:hover{transform:scale(1.03)}
+.card span{background:rgba(0,0,0,0.5);padding:4px 8px;border-radius:6px;margin-top:8px;position:relative;z-index:2;font-weight:bold}
 </style>
 </head>
 <body>
 <h1>MEMTAG SOUNDS</h1>
-<div class="container">
-<main>
-<section id="grid" class="grid"></section>
-<div id="empty" class="empty" style="display:none"></div>
-</main
+<div class="grid" id="grid"></div>
+<script>
+fetch('snd.txt').then(r=>r.text()).then(txt=>{
+  const lines=txt.split(/\r?\n/).filter(l=>l.trim());
+  const grid=document.getElementById('grid');
+  lines.forEach(l=>{
+    const [name,url,img]=l.split(',').map(s=>s.trim());
+    const a=document.createElement('a');
+    a.href=url;a.target='_blank';a.className='card';a.style.backgroundImage=`url(${img})`;
+    const span=document.createElement('span');span.textContent=name;a.appendChild(span);
+    grid.appendChild(a);
+  });
+});
+</script>
+</body>
+</html>
