--- a/snd/index.html
+++ b/snd/index.html
@@ -1,72 +1,1 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>MEMTAG SOUNDS</title>
-<style>
-:root{
-  --gap:12px;
-  --radius:16px;
-  --height:160px;
-  --border-width:4px;
-}
-body{margin:0;font-family:sans-serif;background:#0f1724;color:#fff;padding:20px;transition:background .3s,color .3s}
-body.light{background:#f0f0f0;color:#111}
-h1{text-align:center;margin-bottom:20px;font-size:32px}
-.grid{display:grid;gap:var(--gap);grid-template-columns:repeat(8,1fr)}
-@media(max-width:1200px){.grid{grid-template-columns:repeat(6,1fr)}}
-@media(max-width:992px){.grid{grid-template-columns:repeat(4,1fr)}}
-@media(max-width:640px){.grid{grid-template-columns:repeat(3,1fr)}}
-.card{
-  position:relative;height:var(--height);border-radius:var(--radius);overflow:hidden;
-  cursor:pointer;background-size:cover;background-position:center;
-  display:flex;align-items:flex-end;justify-content:center;
-  border:var(--border-width) solid rgba(255,255,255,0.3);
-  transition:transform .2s, border-color .3s;
-}
-.card:hover{transform:scale(1.03);border-color:rgba(255,255,255,0.7)}
-.bg-overlay{
-  position:absolute;inset:0;background:rgba(0,0,0,0.3);
-  transition:background .3s;
-}
-.card span{
-  position:relative;z-index:2;
-  width:100%;text-align:center;
-  padding:6px 8px;margin:0;
-  font-weight:bold;font-size:16px;
-  background:rgba(0,0,0,0.4);
-  backdrop-filter:blur(6px);
-  color:#fff;
-}
-body.light .card span{background:rgba(255,255,255,0.4);color:#111}
-.theme-toggle{
-  position:fixed;top:20px;right:20px;padding:8px 12px;
-  background:#666;color:#fff;border:none;border-radius:6px;cursor:pointer;
-}
-body.light .theme-toggle{background:#ccc;color:#111}
-</style>
-</head>
-<body>
-<h1>MEMTAG SOUNDS</h1>
-<button class="theme-toggle">Тема</button>
-<div class="grid" id="grid"></div>
-<script>
-const grid=document.getElementById('grid');
-fetch('snd.txt').then(r=>r.text()).then(txt=>{
-  txt.split(/\r?\n/).filter(l=>l.trim()).forEach(l=>{
-    const [name,url,img]=l.split(',').map(s=>s.trim());
-    const a=document.createElement('a');
-    a.href=url;a.target='_blank';a.className='card';
-    a.style.backgroundImage=`url(${img})`;
-    const overlay=document.createElement('div');overlay.className='bg-overlay';a.appendChild(overlay);
-    const span=document.createElement('span');span.textContent=name;a.appendChild(span);
-    grid.appendChild(a);
-  });
-});
-
-const btn=document.querySelector('.theme-toggle');
-btn.addEventListener('click',()=>document.body.classList.toggle('light'));
-</script>
-</body>
-</html>
+<!DOCTYPE html><html lang="uk"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>MEMTAG SOUNDS</title><style>:root{--g:16px;--r:20px;--h:180px;--bwidth:6px;--tcolor:#fff;--bgdark:#0f1724;--bglight:#f0f0f0;--textblur:10px}body{margin:0;font-family:Inter,system-ui,sans-serif;padding:20px;background:var(--bgdark);color:var(--tcolor);transition:background .3s,color .3s}body.light{background:var(--bglight);color:#111}h1{text-align:center;margin-bottom:20px;font-size:36px;font-weight:800;letter-spacing:1px}h2{text-align:center;margin-top:60px;font-size:16px;color:var(--tcolor)}body.light h2{color:#111}.grid{display:grid;gap:var(--g);grid-template-columns:repeat(8,1fr)}@media(max-width:1200px){.grid{grid-template-columns:repeat(6,1fr)}}@media(max-width:992px){.grid{grid-template-columns:repeat(4,1fr)}}@media(max-width:640px){.grid{grid-template-columns:repeat(3,1fr)}}.card{position:relative;height:var(--h);border-radius:var(--r);overflow:hidden;cursor:pointer;background-size:cover;background-position:center;display:flex;align-items:flex-end;justify-content:center;border:var(--bwidth) solid rgba(255,255,255,0.3);transition:all .3s;box-shadow:0 15px 40px rgba(0,0,0,.5)}.card:hover{transform:scale(1.03);border-color:rgba(255,255,255,0.7);box-shadow:0 25px 60px rgba(0,0,0,.6)}.bg-overlay{position:absolute;inset:0;background:rgba(0,0,0,0.3);transition:background .3s}.text-row{position:relative;z-index:2;width:100%;text-align:center;padding:12px 0;font-weight:700;font-size:18px;background:rgba(0,0,0,0.4);backdrop-filter:blur(var(--textblur));color:var(--tcolor);transition:all .3s}body.light .text-row{background:rgba(255,255,255,0.4);color:#111}.theme-toggle{position:fixed;top:20px;right:20px;padding:10px 14px;background:#666;color:#fff;border:none;border-radius:8px;cursor:pointer;transition:all .3s}body.light .theme-toggle{background:#ccc;color:#111}.footer{text-align:center;margin-top:50px;font-size:14px;line-height:1.5;color:var(--tcolor)}body.light .footer{color:#111}</style></head><body><h1>MEMTAG SOUNDS</h1><button class="theme-toggle">Тема</button><div class="grid" id="grid"></div><div class="footer">Developed by MEMTAG<br><a href="https://t.me/mem_soundtag" target="_blank">Telegram</a> | <a href="https://tiktok.com/@mem.tag" target="_blank">Tiktok</a></div><script>!function(){var f="snd.txt",l=600,r=(navigator.language||"en").slice(0,2),s={uk:{c:"Скопійовано",e:"Файл snd.txt не знайдено або пустий"},ru:{c:"Скопировано",e:"Файл snd.txt не найден или пуст"},en:{c:"Copied",e:"snd.txt not found or empty"}},t=s[r]||s.en,C=function(a){return a.split(/\r?\n/).map(function(x){return x.trim()}).filter(function(x){return x&&x[0]!="#"})},P=function(a){return a.split(",").map(function(x){return x.trim()})},B=function(txt,b){try{navigator.clipboard&&navigator.clipboard.writeText?navigator.clipboard.writeText(txt).then(function(){S(b)}):(ta=document.createElement("textarea")).value=txt,document.body.appendChild(ta),ta.select(),document.execCommand("copy"),ta.remove(),S(b)}catch(e){}},S=function(b){b.classList.add("show"),setTimeout(function(){b.classList.remove("show")},1500)},D=function(n,u,i){var a=document.createElement("div");a.className="card",a.style.backgroundImage="url("+i+")";var o=document.createElement("div");o.className="bg-overlay",a.appendChild(o);var s=document.createElement("div");s.className="text-row",s.textContent=n,a.appendChild(s);var p=null;a.addEventListener("pointerdown",function(){p=setTimeout(function(){p=null,B(u,a)},l)}),a.addEventListener("pointerup",function(){p?(clearTimeout(p),p=null,setTimeout(function(){window.open(u,"_blank")},200)):window.open(u,"_blank")}),a.addEventListener("pointercancel",function(){p&&(clearTimeout(p),p=null)}),a.addEventListener("keydown",function(e){"Enter"===e.key&&(e.shiftKey?B(u,a):window.open(u,"_blank"))});return a},L=function(){fetch(f+'?_='+Date.now()).then(function(r){return r.ok?r.text():Promise.reject()}).then(function(txt){var rows=C(txt),g=document.getElementById("grid");g.innerHTML="";if(!rows.length)return void(document.getElementById("empty")&&(document.getElementById("empty").style.display="block",document.getElementById("empty").textContent=t.e));rows.forEach(function(rw){var p=P(rw);p.length>=3&&g.appendChild(D(p[0],p[1],p[2]))})}).catch(function(){document.getElementById("empty")&&(document.getElementById("empty").style.display="block",document.getElementById("empty").textContent=t.e)})}();document.querySelector('.theme-toggle').addEventListener('click',function(){document.body.classList.toggle('light')});}();</script></body></html>
