--- a/dx/us/index.html
+++ b/dx/us/index.html
@@ -78,13 +78,13 @@
         muteButton.addEventListener('click', function() {
             muteClicks++;
             if (muteClicks >= 3) {
-                window.open("https://www.tiktok.com", "_blank");
+                window.open("https://t.me/DEXITAG_COMPANY", "_blank");
             }
         });
     });
 
     function telega() {
-        window.open("https://www.tiktok.com", "_blank");
+        window.open("https://t.me/DEXITAG_COMPANY", "_blank");
     }
 </script>
 
