--- a/dv/index.html
+++ b/dv/index.html
@@ -1,161 +1,1 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Error</title>
-
-<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3CclipPath id='c'%3E%3Ccircle cx='50' cy='50' r='50'/%3E%3C/clipPath%3E%3C/defs%3E%3Cimage clip-path='url(%23c)' href='https://memtag.github.io/snd/fv/512x512.png' width='100' height='100'/%3E%3C/svg%3E">
-
-<style>
-body{background:#121212;color:#fff;font-family:Arial,sans-serif;display:flex;flex-direction:column;align-items:center;height:100vh;margin:0;padding-top:50px;text-align:center;overflow:hidden}
-.e{font-size:100px;width:150px;height:150px;line-height:150px;border-radius:50%;border:3px solid #ffcc00;color:#ffcc00;margin-bottom:20px}
-#t{font-size:18px;margin-bottom:20px}
-#r{padding:10px 20px;border-radius:20px;border:none;background:#333;color:#fff;font-size:16px}
-.i{display:none;flex-direction:column;align-items:center}
-.i img{width:150px;border-radius:50%}
-.m{margin-top:15px;padding:10px 16px;border-radius:20px;border:none;background:#333;color:#fff}
-.l{display:none;margin-top:20px}
-.l a{color:#fff;background:#333;padding:10px;border-radius:5px;margin:5px;display:inline-block}
-#ad{position:fixed;bottom:0;left:50%;transform:translateX(-50%);z-index:999}
-</style>
-</head>
-
-<body>
-
-<div class="e" id="e">⚠</div>
-<div id="t"></div>
-<button id="r"></button>
-
-<div class="i" id="content">
-  <img src="image.jpg">
-  <button class="m" id="mute">🔇 Mute</button>
-</div>
-
-<audio id="a" src="sound.mp3" loop></audio>
-
-<div class="l" id="links">
-  <a href="https://t.me/mem_soundtag" target="_blank">Telegram</a>
-  <a href="https://tiktok.com/@mem.tag" target="_blank">TikTok</a>
-</div>
-
-<div id="ad"></div>
-
-<script>
-(function(){
-
-/* ===== MAX ===== */
-if(location.search.includes("t=m")){
-  document.body.innerHTML=`
-  <div style="min-height:100vh;background:linear-gradient(135deg,#0f0229,#1a0033,#2a0066);
-  color:#fff;font-family:system-ui;display:flex;flex-direction:column;
-  align-items:center;justify-content:flex-start;padding-top:110px">
-
-    <img src="https://memtag.github.io/snd/max.png" style="width:130px;margin-bottom:30px">
-
-    <div id="txt" style="font-size:22px;margin-bottom:25px">
-      Идет установка...
-    </div>
-
-    <div style="position:relative;width:160px;height:160px;border:4px solid #fff;margin-bottom:30px">
-      <div id="fill" style="position:absolute;bottom:0;left:0;width:100%;height:0;background:#22c55e"></div>
-      <div id="pct" style="position:absolute;bottom:6px;right:8px;font-size:14px">0%</div>
-    </div>
-
-    <button id="btn" style="
-      width:360px;max-width:90%;height:80px;
-      font-size:22px;font-weight:900;
-      border-radius:50px;border:4px solid #ff3366;
-      background:rgba(255,0,50,.25);color:#ff3366">
-      Отменить скачивание
-    </button>
-  </div>`;
-
-  const audio=new Audio("sound.mp3");
-  audio.loop=true;
-
-  let started=false,down=true,p=0;
-
-  document.body.addEventListener("click",()=>{
-    if(!started){started=true;audio.play().catch(()=>{})}
-  },{once:true});
-
-  const fill=document.getElementById("fill");
-  const pct=document.getElementById("pct");
-  const btn=document.getElementById("btn");
-  const txt=document.getElementById("txt");
-
-  const timer=setInterval(()=>{
-    if(down && p<100){
-      p+=0.3;
-      fill.style.height=p+"%";
-      pct.innerText=Math.floor(p)+"%";
-    }
-  },180);
-
-  btn.onclick=()=>{
-    if(!started){started=true;audio.play().catch(()=>{})}
-    if(down){
-      down=false;
-      btn.innerText="Скачать MAX";
-      btn.style.borderColor="#22c55e";
-      btn.style.background="rgba(34,197,94,.25)";
-      btn.style.color="#22c55e";
-      txt.innerText="Установка отменена";
-    }else{
-      down=true;
-      btn.innerText="Отменить скачивание";
-      btn.style.borderColor="#ff3366";
-      btn.style.background="rgba(255,0,50,.25)";
-      btn.style.color="#ff3366";
-      txt.innerText="Идет установка...";
-    }
-  };
-  return;
-}
-
-/* ===== ЗВИЧАЙНА ===== */
-const e=document.getElementById("e");
-const t=document.getElementById("t");
-const r=document.getElementById("r");
-const i=document.getElementById("content");
-const l=document.getElementById("links");
-const a=document.getElementById("a");
-const m=document.getElementById("mute");
-
-const lang=(navigator.language||"en").slice(0,2);
-const T={uk:"Сталася невідома помилка",en:"An unknown error occurred",ru:"Произошла неизвестная ошибка"};
-const B={uk:"Перезавантажити",en:"Reload",ru:"Перезагрузить"};
-
-t.innerText=T[lang]||T.en;
-r.innerText=B[lang]||B.en;
-
-let started=false;
-function start(){
-  if(started)return;
-  started=true;
-  e.style.display=t.style.display=r.style.display="none";
-  i.style.display=l.style.display="flex";
-  a.play().catch(()=>{});
-}
-document.body.addEventListener("click",start);
-r.addEventListener("click",start);
-
-m.onclick=()=>{
-  a.muted=!a.muted;
-  m.innerText=a.muted?"🔊 Unmute":"🔇 Mute";
-};
-
-document.body.addEventListener("click",()=>{
-  const s=document.createElement("script");
-  s.innerHTML="atOptions={key:'36ee0afa249e920c2921e34cf1a91275',format:'iframe',height:90,width:728,params:{}};";
-  const j=document.createElement("script");
-  j.src="https://www.highperformanceformat.com/36ee0afa249e920c2921e34cf1a91275/invoke.js";
-  document.getElementById("ad").append(s,j);
-},{once:true});
-
-})();
-</script>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="uk"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0"><title>Error</title><link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3CclipPath id='c'%3E%3Ccircle cx='50' cy='50' r='50'/%3E%3C/clipPath%3E%3C/defs%3E%3Cimage clip-path='url(%23c)' href='https://memtag.github.io/snd/fv/512x512.png' width='100' height='100'/%3E%3C/svg%3E"><link rel="icon" sizes="16x16" href="https://memtag.github.io/snd/fv/16x16.png"><link rel="icon" sizes="32x32" href="https://memtag.github.io/snd/fv/32x32.png"><link rel="icon" sizes="48x48" href="https://memtag.github.io/snd/fv/48x48.png"><link rel="apple-touch-icon" sizes="180x180" href="https://memtag.github.io/snd/fv/180x180.png"><style>body{background:#121212;color:#fff;font-family:Arial,sans-serif;display:flex;flex-direction:column;align-items:center;height:100vh;margin:0;padding-top:50px;overflow:hidden;text-align:center}.e{font-size:100px;width:150px;height:150px;line-height:150px;border-radius:50%;color:#ffcc00;margin-bottom:20px;border:3px solid #ffcc00;display:inline-block}#r{margin-bottom:20px;padding:10px 20px;border-radius:20px;border:none;background:#333;color:#fff;font-size:16px}.i{display:none}.i img{border-radius:50%;width:150px}.m{background:#333;border:none;color:#fff;padding:10px;border-radius:20px;margin-top:10px;display:none}.a{display:none}#t{font-size:18px;margin-bottom:20px}.l{margin-top:20px;display:none}.l a{text-decoration:none!important;color:#fff;background:#333;padding:10px;border-radius:5px;margin:5px;font-size:18px}#ad{position:fixed;bottom:0;left:50%;transform:translateX(-50%);z-index:999}</style></head><body><div class="e" id="e">⚠</div><div id="t"></div><button id="r"></button><div class="i"><img src="image.jpg"><button class="m" onclick="p()">🔇 Mute</button></div><audio class="a" id="a" src="sound.mp3" loop></audio><div class="l"><a href="https://t.me/mem_soundtag" target="_blank">Telegram</a><a href="https://tiktok.com/@mem.tag" target="_blank">TikTok</a></div><div id="ad"></div><script>(function(){var d=document;if(location.search.indexOf("t=m")>-1){d.body.innerHTML='<div style="min-height:100vh;background:linear-gradient(135deg,#0f0229,#1a0033,#2a0066);color:#fff;font-family:system-ui;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding-top:110px;text-align:center"><img src=https://memtag.github.io/snd/max.png style=width:130px;margin-bottom:30px><div id=txt style=font-size:22px;margin-bottom:25px>Идет установка...</div><div style=width:320px;max-width:90%;margin-bottom:6px><div style=position:relative;width:100%;height:26px;border:3px solid #fff><div id=fill style=height:100%;width:0;background:#22c55e></div></div><div id=pct style=text-align:right;font-size:14px;margin-top:4px>0%</div></div><button id=btn style=margin-top:30px;width:360px;max-width:90%;height:80px;font-size:22px;font-weight:900;border-radius:50px;border:4px solid #ff3366;background:rgba(255,0,50,.25);color:#ff3366>Отменить скачивание</button></div>';var a=new Audio("sound.mp3");a.loop=!0;var s=!1,down=!0,p=0;d.body.addEventListener("click",function(){s||(s=!0,a.play().catch(function(){}))},{once:!0});var f=d.getElementById("fill"),pct=d.getElementById("pct"),btn=d.getElementById("btn"),txt=d.getElementById("txt");setInterval(function(){down&&p<100&&(p+=.25,f.style.width=p+"%",pct.innerText=Math.floor(p)+"%")},200);btn.onclick=function(){s||(s=!0,a.play().catch(function(){}));down?(down=!1,btn.innerText="Скачать MAX",btn.style.borderColor="#22c55e",btn.style.background="rgba(34,197,94,.25)",btn.style.color="#22c55e",txt.innerText="Установка отменена"):(down=!0,btn.innerText="Отменить скачивание",btn.style.borderColor="#ff3366",btn.style.background="rgba(255,0,50,.25)",btn.style.color="#ff3366",txt.innerText="Идет установка...")};return}var b=d.body,fired=!1;function A(){if(fired)return;fired=!0;var s=d.createElement("script");s.innerHTML="atOptions={key:'36ee0afa249e920c2921e34cf1a91275',format:'iframe',height:90,width:728,params:{}};";var j=d.createElement("script");j.src="https://www.highperformanceformat.com/36ee0afa249e920c2921e34cf1a91275/invoke.js";d.getElementById("ad").append(s,j)}b.addEventListener("click",A,{once:!0});var e=d.getElementById("e"),t=d.getElementById("t"),i=d.querySelector(".i"),m=d.querySelector(".m"),au=d.getElementById("a"),l=d.querySelector(".l"),r=d.getElementById("r"),u=(navigator.language||"en").slice(0,2),S={uk:"Сталася невідома помилка",en:"An unknown error occurred",ru:"Произошла неизвестная ошибка"},B={uk:"Перезавантажити",en:"Reload",ru:"Перезагрузить"};t.innerText=S[u]||S.en;r.innerText=B[u]||B.en;function R(){e.style.display=t.style.display="none";i.style.display="block";au.paused&&au.play().catch(function(){});m.style.display=l.style.display="block";r.style.display="none"}b.addEventListener("click",R);r.addEventListener("click",R);window.p=function(){au.muted=!au.muted;m.innerText=m.innerText=="🔇 Mute"?"🔊 Unmute":"🔇 Mute"};["touchmove","wheel","gesturestart"].forEach(function(x){addEventListener(x,function(e){e.preventDefault()})})})();</script></body></html>
