--- a/p/ad/index.html
+++ b/p/ad/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Порожня сторінка</title>
+  <title>AD</title>
 </head>
 <body>
   <script type="text/javascript">
@@ -67,5 +67,9 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/60f20d48a82429c0bba847a9c350afd2/invoke.js"></script>
   <script type='text/javascript' src='//pl28106749.effectivegatecpm.com/e1/02/3d/e1023da1e01babe3c7cb966cd3514d7f.js'></script>
+<script src="https://pl28076746.effectivegatecpm.com/b6/70/e9/b670e92fec2b48339827baf182417ede.js"></script>
+<script src="https://pl28106749.effectivegatecpm.com/e1/02/3d/e1023da1e01babe3c7cb966cd3514d7f.js"></script>
+<script async="async" data-cfasync="false" src="https://pl28076504.effectivegatecpm.com/b1da9baf49fb4b1bd34cbe680e8f70b4/invoke.js"></script>
+<div id="container-b1da9baf49fb4b1bd34cbe680e8f70b4"></div>
 </body>
 </html>
